<resources>
    <string name="app_name">Cubos_Kotlin01</string>
    <string name="calculator_imc">Calculadora IMC</string>
    <string name="imc">__ IMC __</string>
    <string name="tip_weight">Seu peso(kg)</string>
    <string name="tip_height">Sua Altura(m)</string>
    <string name="calculate">Calcular</string>
    <string name="clean">Limpar</string>
    <string name="number">2</string>
    <string name="welcome">Bem vinda(o)!!!</string>
    <string name="go">Vamos Lá</string>
    <string name="informations">Suas Informações</string>
</resources>
