<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackground"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/welcomeTXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/welcome"
        android:textSize="48sp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"

        android:text="@string/calculator_imc"
        android:textSize="32sp"
        android:textColor="@color/colorBlue"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/imcBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button"

        android:text="@string/go"
        android:textColor="@color/colorWhite"
        android:textSize="24sp" />

</LinearLayout>