<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/calculatorTXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/calculator"
        android:textColor="@color/colorBlue"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/weightEDT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/calculatorTXT"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/tip_weight"
        android:inputType="numberDecimal"
        android:padding="15dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/heightEDT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weightEDT"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:hint="@string/tip_height"
        android:inputType="numberDecimal"
        android:padding="15dp"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@id/heightEDT">

        <Button
            android:id="@+id/calculateBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"

            android:background="@drawable/shape_button"
            android:text="@string/calculate"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/cleanBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:layout_toEndOf="@id/calculateBTN"


            android:background="@drawable/shape_button"
            android:text="@string/clean"
            android:textColor="@color/colorWhite" />

        </RelativeLayout>

</RelativeLayout>